--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' blob:">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vite App</title>
+  <title>Amane Misa Mark Down Editor</title>
 </head>
 <body>
-<div id="app"></div>
-<script src="./src/index.ts" type="module"></script>
+<div id="root"></div>
+<script src="./src/index.tsx" type="module"></script>
 </body>
 </html>
