--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' blob:">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Amane Misa Mark Down Editor</title>
+  <title>Mion Mark Down</title>
 </head>
 <body>
 <div id="root"></div>
